[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "pygments",
    "requests",
    "setuptools>=61.0",
    "tabulate",
    "termcolor",
    "wheel",
]

[project]
name = "intelx-sdk"
readme = "README.md"
requires-python = ">=3.10"
version = "0.8.0dev3"
description = "IntelX is a Python command-line utility and API wrapper for intelx.io, made to perform any kind of open-source intelligence."
authors = [
    { email = "info@intelx.io", name = "Kleissner Investments s.r.o./ Dominik Penner" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pygments",
    "requests",
    "tabulate",
    "termcolor",
]
keywords = [
    "IntelligenceX",
    "_IntelligenceX",
    "_intelx",
    "intelligence x",
    "intelx",
    "intelx.io",
]

[project.urls]
"Bug Tracker" = "https://github.com/IntelligenceX/SDK/issues"
Homepage = "https://github.com/IntelligenceX/SDK/tree/master/Python"

[project.scripts]
intelx = "scripts.intelx:main"

[tool.setuptools]
packages = ["intelx"]
